--- a/frontend/src/components/ImmunizationTable.css
+++ b/frontend/src/components/ImmunizationTable.css
@@ -1,30 +1,40 @@
-/* #immunotable-area{
-    margin-left: 3vw;
-} */
-
-#table-title {
-  height: 16vh;
-  /* padding-left: 20px; */
-  line-height: 16vh;
-  font-size: x-large;
-  font-weight: bold;
+.immunotable-container {
+  margin: 20px auto;
+  width: 90%;
+  overflow-x: auto;
 }
 
-table {
+.immunization-table {
   width: 100%;
   border-collapse: collapse;
-}
-td,
-th {
-  border: 1px solid black;
-  height: 6vh;
-  text-align: center;
-}
-tr:nth-child(even) {
-  background-color: rgb(180, 214, 246);
+  margin-top: 20px;
 }
 
-#table-headers {
-  background-color: rgb(114, 161, 205);
-  height: 10vh;
+.immunization-table,
+.immunization-table th,
+.immunization-table td {
+  border: 1px solid #ddd;
+}
+
+.immunization-table th,
+.immunization-table td {
+  padding: 10px;
+  text-align: left;
+}
+
+.immunization-table th {
+  background-color: #f2f2f2;
+  color: black;
+}
+
+.immunization-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.immunization-table tr.booster {
+  background-color: #eaf7ff;
+}
+
+.immunization-table tr:hover {
+  background-color: #ddd;
 }
