--- a/frontend/src/components/MedicationTable.css
+++ b/frontend/src/components/MedicationTable.css
@@ -1,30 +1,22 @@
-/* #medtable-area{
-    margin-left: 3vw;
-} */
-
-#table-title {
-  height: 16vh;
-  /* padding-left: 20px; */
-  line-height: 16vh;
-  font-size: x-large;
-  font-weight: bold;
-}
-
-table {
+.med-table {
   width: 100%;
   border-collapse: collapse;
-}
-td,
-th {
-  border: 1px solid black;
-  height: 6vh;
-  text-align: center;
-}
-/* tr:nth-child(even) {
-    background-color: white;
+  margin-top: 20px;
+  background-color: #fff;
 }
 
-#table-headers{
-    background-color: rgb(114,161,205);
-    height: 10vh;
-} */
+.med-table th,
+.med-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+.med-table th {
+  background-color: #114161;
+  color: #fff;
+}
+
+.med-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
