--- a/frontend/src/pages/InputMedical.css
+++ b/frontend/src/pages/InputMedical.css
@@ -1,7 +1,7 @@
 /* ConsultationForm.css */
 form {
-  max-width: 9000px; /* Or whatever maximum width you prefer */
-  margin: 20px auto; /* This centers the form with a margin from the top */
+  max-width: 9000px;
+  margin: 20px auto;
   padding: 20px;
   background: #f7f7f7;
   border-radius: 8px;
@@ -10,12 +10,12 @@ form {
 
 form label {
   display: flex;
-  flex-direction: column; /* Stacks the input under the label */
+  flex-direction: column;
   margin-bottom: 10px;
 }
 
 form label span {
-  font-weight: bold; /* Optionally style label text */
+  font-weight: bold;
 }
 
 form input[type="text"],
@@ -32,7 +32,7 @@ form select {
 }
 
 form textarea {
-  height: 100px; /* Or any other height */
+  height: 100px;
   resize: vertical;
 }
 
