--- a/frontend/src/pages/LandingPage.css
+++ b/frontend/src/pages/LandingPage.css
@@ -31,7 +31,7 @@
 }
 
 .btn-primary {
-  background-color: #005a87; /* You may choose to keep this or use brand color */
+  background-color: #005a87;
 }
 
 .btn-secondary {
