--- a/frontend/src/pages/MedicationsPage.css
+++ b/frontend/src/pages/MedicationsPage.css
@@ -1,11 +1,11 @@
 .medications-page {
-  background-color: #ffffff; /* Set to white or another light color */
-  border-radius: 8px; /* Rounded corners for the container */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  padding: 20px; /* Space inside the container */
-  max-width: 1000px; /* Adjust width as needed */
-  margin: 20px auto; /* Center the container with automatic horizontal margins */
-  overflow: hidden; /* Ensures the content doesn't overflow the rounded corners */
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 1000px;
+  margin: 20px auto;
+  overflow: hidden;
 }
 
 /* h1,
@@ -14,31 +14,27 @@ h2 {
   margin-bottom: 20px; 
 } */
 
-/* Further style the table headers */
 .med-table th {
-  background-color: #007bff; /* A blue shade for header background */
-  color: white; /* White text color for headers */
-  padding: 10px; /* Spacing inside the header cells */
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
 }
 
-/* Style for the horizontal rule separating sections */
 hr.solid {
-  border-top: 2px solid #eee; /* Lighter and thinner line */
-  margin-top: 30px; /* Space before the HR */
-  margin-bottom: 30px; /* Space after the HR */
+  border-top: 2px solid #eee;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-/* Style for the body rows */
 .med-table tr {
-  background-color: #f9f9f9; /* Light background for rows */
+  background-color: #f9f9f9;
 }
 
 .med-table td {
-  padding: 10px; /* Spacing inside cells */
-  border-bottom: 1px solid #eee; /* Lighter borders for cells */
+  padding: 10px;
+  border-bottom: 1px solid #eee;
 }
 
-/* Add a hover effect for rows */
 .med-table tr:hover {
   background-color: #f1f1f1;
 }
